--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -18,6 +18,8 @@ jobs:
   build:
     needs: test
     runs-on: ubuntu-latest
+    outputs:
+      script-file: ${{ steps.publish.outputs.script-file }}
     steps:
       - name: Get code
         uses: actions/checkout@v3
@@ -25,10 +27,14 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
-      - name: Upload artificats 
+      - name: Publish JS filename
+        id: publish
+        # writes data into some output file
+        run: find dist/assets/*.js -type f -execdir echo 'script-file={}' >> $GITHUB_OUTPUT ';'
+      - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: dist-files 
+          name: dist-files
           path: dist
   deploy:
     needs: build
@@ -38,7 +44,9 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist-files
-      - name: Output contents 
+      - name: Output contents
         run: ls
+      - name: Output filename
+        run: echo "${{ needs.build.outputs.script-file }}"
       - name: Deploy
         run: echo "Deploying..."
